Merged revisions 84980 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

........
  r84980 | antoine.pitrou | 2010-09-23 21:51:39 +0200 (jeu., 23 sept. 2010) | 3 lines

  Issue #9928: Properly initialize the types exported by the bz2 module.
........